@@ -73,7 +73,7 @@ public:
                         size_type elem_size,
                         char initial_value = '\0') = 0;
 
-  /// Free <ptr> (must have been allocated by <ACE_Allocator::malloc>).
+  /// Free @a ptr (must have been allocated by ACE_Allocator::malloc()).
   virtual void free (void *ptr) = 0;
 
   /// Remove any resources associated with this memory manager.
