@@ -145,7 +145,7 @@ public:
   /// Constructor that copies @a s into dynamically allocated memory.
   ACE_SString (const char *s, ACE_Allocator *alloc = 0);
 
-  /// Constructor that copies @a len chars of  @s  into dynamically
+  /// Constructor that copies @a len chars of @a s into dynamically
   /// allocated memory (will NUL terminate the result).
   ACE_SString (const char *s, size_type len, ACE_Allocator *alloc = 0);
 
@@ -195,7 +195,7 @@ public:
   /// Get the underlying pointer.
   const char *fast_rep (void) const;
 
-  /// Same as STL String's <c_str> and <fast_rep>.
+  /// Same as STL String's c_str() and fast_rep().
   const char *c_str (void) const;
 
   /// Comparison operator that will match substrings.  Returns the
@@ -230,7 +230,7 @@ public:
   /// Inequality comparison operator.
   bool operator != (const ACE_SString &s) const;
 
-  /// Performs a <strcmp>-style comparison.
+  /// Performs a strcmp()-style comparison.
   int compare (const ACE_SString &s) const;
 
   /// Dump the state of an object.
@@ -243,7 +243,7 @@ private:
   /// Pointer to a memory allocator.
   ACE_Allocator *allocator_;
 
-  /// Length of the ACE_SString (not counting the trailing '\0').
+  /// Length of the ACE_SString (not counting the trailing '\\0').
   size_type len_;
 
   /// Pointer to data.
